cmake_minimum_required(VERSION 2.8)
project(gameai-assignment-pathfinding)
include_directories(include)
add_executable(gameai-assignment-pathfinding src/main.cpp)
set_property(TARGET gameai-assignment-pathfinding PROPERTY CXX_STANDARD 14)
target_link_libraries(gameai-assignment-pathfinding boost_graph)
file(INSTALL assets/graph.dot DESTINATION assets)
